--- a/todaystepcounterlib/src/main/res/values/strings.xml
+++ b/todaystepcounterlib/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TodayStepCounterLib</string>
-    <string name="title_notification_bar">当前步数:%1$s</string>
+    <string name="title_notification_bar">Current Step:%1$s</string>
 </resources>
